--- a/src/Portfolio/Portfolio.scss
+++ b/src/Portfolio/Portfolio.scss
@@ -53,6 +53,7 @@
             color: white;
             position: relative;
             transition: all 0.5s ease;
+            overflow: hidden;
             cursor: pointer;
 
             @include moblie{
